doc: addded swagger for the rest
