# http-server/handler.go
@@ -25,7 +25,6 @@ type LoginRequest struct {
 
 // @Summary		login account
 // @Description	get login cookie for other requests
-// @Tags			accounts
 // @Accept			json
 // @Produce		json
 // @Param loginRequest body LoginRequest true "login request"
@@ -140,14 +139,14 @@ func BaseHandler(url string, next Handler) func(c *fiber.Ctx) error {
 	}
 }
 
-// @Summary		Show an account
-// @Description	get string by ID
-// @Tags			accounts
-// @Accept			json
+// @Summary		home page
+// @Description	get home page
 // @Produce		json
-// @Param			id	path		int	true	"Account ID"
-// @Success		200	{object}	map[string]string
-// @Router			/accounts/{id} [get]
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.Homepage]
+// @Failure		401	{object}	Response[any]
+// @Router		/home [get]
 func Home(c *fiber.Ctx, resp *http.Response) error {
 	data, err := siaklib.ParseWelcomePage(resp.Body)
 	if err != nil {
@@ -161,6 +160,14 @@ func Home(c *fiber.Ctx, resp *http.Response) error {
 	})
 }
 
+// @Summary		user account
+// @Description	get user account info
+// @Produce		json
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.UserInfo]
+// @Failure		401	{object}	Response[any]
+// @Router		/me [get]
 func Me(c *fiber.Ctx, resp *http.Response) error {
 	data, err := siaklib.ParseNav(resp.Body)
 	if err != nil {
@@ -174,6 +181,15 @@ func Me(c *fiber.Ctx, resp *http.Response) error {
 	})
 }
 
+// @Summary		user academic summary
+// @Description	get user academic summary
+// @tags academic
+// @Produce		json
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.StudentSummary]
+// @Failure		401	{object}	Response[any]
+// @Router		/academic/summary [get]
 func AcademicSummary(c *fiber.Ctx, resp *http.Response) error {
 	data, err := siaklib.ParseAcademicSummaryPage(resp.Body)
 	if err != nil {
@@ -187,6 +203,15 @@ func AcademicSummary(c *fiber.Ctx, resp *http.Response) error {
 	})
 }
 
+// @Summary		user academic history
+// @Description	get user academic history
+// @tags academic
+// @Produce		json
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.SemesterScore]
+// @Failure		401	{object}	Response[any]
+// @Router		/academic/history [get]
 func AcademicHistory(c *fiber.Ctx, resp *http.Response) error {
 	data, err := siaklib.ParseAcademicHistoryPage(resp.Body)
 	if err != nil {
@@ -200,6 +225,15 @@ func AcademicHistory(c *fiber.Ctx, resp *http.Response) error {
 	})
 }
 
+// @Summary		user photo
+// @Description	get user academic photo
+// @tags academic
+// @Produce		json
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.StudentSummary]
+// @Failure		401	{object}	Response[any]
+// @Router		/academic/photo [get]
 func UserPhoto(c *fiber.Ctx, resp *http.Response) error {
 	for key, value := range resp.Header {
 		if !strings.Contains(key, "Access-Control") {
@@ -209,6 +243,15 @@ func UserPhoto(c *fiber.Ctx, resp *http.Response) error {
 	return c.SendStream(resp.Body)
 }
 
+// @Summary		user course classes
+// @Description	get user course classes
+// @tags academic
+// @Produce		json
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.StudentSummary]
+// @Failure		401	{object}	Response[any]
+// @Router		/academic/classes [get]
 func CourseClasses(c *fiber.Ctx, resp *http.Response) error {
 	data, err := siaklib.ParseCourseClasses(resp.Body)
 	if err != nil {
@@ -222,6 +265,16 @@ func CourseClasses(c *fiber.Ctx, resp *http.Response) error {
 	})
 }
 
+// @Summary		course info
+// @Description	get course info by id
+// @tags academic
+// @Produce		json
+// @Param courseId path int true "course id"
+// @Param X-Siakng-Cc header string true "siakng cookie"
+// @Param X-Mojavi header string true "mojavi cookie"
+// @Success		200	{object}	Response[siaklib.StudentSummary]
+// @Failure		401	{object}	Response[any]
+// @Router		/academic/course/{courseId} [get]
 func CourseComponent(c *fiber.Ctx) error {
 	courseId := c.Params("courseId")
 	req, err := MakeRequestor(c)
